# PaperRecon

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  launch_writing.py  pixi.toml  pyproject.toml  run_evaluation.py
configs/: cc_sonnet4.yaml  cc_sonnet46.yaml  cc_teams_sonnet46.yaml  codex_gpt5.yaml  codex_gpt54.yaml
paper_recon/: __init__.py
paper_recon/common/: coding_agent.py  config.py  hf_download.py  llm.py  log.py
paper_recon/evaluation/: evaluate_citation.py  evaluate_figure.py  evaluate_per_section.py  evaluate_table.py
paper_recon/writing/: perform_writeup.py  writeup_prompt.py
paper_recon/writing/agents_md/: AGENTS_benchmark.md  AGENTS_both.md  AGENTS_method.md
scripts/: eval_all_modes.sh  eval_all_papers.sh  eval_single.sh  write_all.sh  write_multiple.sh  write_single.sh
